--- a/html/index.html
+++ b/html/index.html
@@ -186,7 +186,7 @@
 					<span class="popups--close close"></span>
 					<h3 class="popups--title">WIE</h3>
 					<p class="popups--text">
-						Wij zijn de makers zelf. We doen in: creatief, copy, regie, voice Over, scouts Concept, productie, montage, spel.
+						<a href="" class="popups--link">Wij</a> zijn de makers zelf. We doen in: creatief, copy, regie, voice Over, scouts Concept, productie, montage, spel.
 					</p>
 
 					<div class="popups--carousel-person person">
