6+ img in carousel

--- a/html/index.html
+++ b/html/index.html
@@ -192,7 +192,9 @@
 					<div class="popups--carousel-person person">
 
 						<div class="person--profile">
-							<img src="assets/img/person1.jpg" class="person--img">
+							<div class="person--img">
+								<img src="assets/img/person1.jpg">
+							</div>
 							<div class="person--name">
 								<span>BAS vaN</span><br>
 								<span>Teylingen</span>
@@ -201,7 +203,9 @@
 						</div>
 
 						<div class="person--profile">
-							<img src="assets/img/person1.jpg" class="person--img">
+							<div class="person--img">
+								<img src="assets/img/person1.jpg">
+							</div>
 							<div class="person--name">
 								<span>Michiel</span><br>
 								<span>Peereboom</span>
@@ -210,7 +214,9 @@
 						</div>
 
 						<div class="person--profile">
-							<img src="assets/img/person1.jpg" class="person--img">
+							<div class="person--img">
+								<img src="assets/img/person1.jpg">
+							</div>
 							<div class="person--name">
 								<span>Murk</span><br>
 								<span>Ozinga</span>
@@ -219,7 +225,9 @@
 						</div>
 
 						<div class="person--profile">
-							<img src="assets/img/person1.jpg" class="person--img">
+							<div class="person--img">
+								<img src="assets/img/person1.jpg">
+							</div>
 							<div class="person--name">
 								<span>Roy van</span><br>
 								<span>Rossum</span>
@@ -228,7 +236,9 @@
 						</div>
 
 						<div class="person--profile">
-							<img src="assets/img/person1.jpg" class="person--img">
+							<div class="person--img">
+								<img src="assets/img/person1.jpg">
+							</div>
 							<div class="person--name">
 								<span>Anouk van</span><br>
 								<span>Schie</span>
