--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,9 @@
 				<span class="navlink">Wat</span>
 			</li>
 			<li class="dropdown-menu--item">
+				<span class="navlink">Nieus</span>
+			</li>
+			<li class="dropdown-menu--item">
 				<span class="navlink">WIE</span>
 			</li>
 			<li class="dropdown-menu--item">
@@ -74,6 +77,9 @@
 		<ul class="nav--list">
 			<li class="nav--item">
 				<span class="nav--link navlink">Wat</span>
+			</li>
+			<li class="nav--item">
+				<span class="nav--link navlink">Nieus</span>
 			</li>
 			<li class="nav--item">
 				<span class="nav--link navlink">WIE</span>
@@ -193,7 +199,7 @@
 
 						<div class="person--profile">
 							<div class="person--img">
-								<img src="assets/img/person1.jpg">
+								<img src="assets/img/avatar-bas.jpg">
 							</div>
 							<div class="person--name">
 								<span>BAS vaN</span><br>
@@ -204,7 +210,7 @@
 
 						<div class="person--profile">
 							<div class="person--img">
-								<img src="assets/img/person1.jpg">
+								<img src="assets/img/avatar-michael.jpg">
 							</div>
 							<div class="person--name">
 								<span>Michiel</span><br>
@@ -215,7 +221,7 @@
 
 						<div class="person--profile">
 							<div class="person--img">
-								<img src="assets/img/person1.jpg">
+								<img src="assets/img/avatar-murk.jpg">
 							</div>
 							<div class="person--name">
 								<span>Murk</span><br>
@@ -226,7 +232,7 @@
 
 						<div class="person--profile">
 							<div class="person--img">
-								<img src="assets/img/person1.jpg">
+								<img src="assets/img/avatar-bas.jpg">
 							</div>
 							<div class="person--name">
 								<span>Roy van</span><br>
@@ -237,7 +243,7 @@
 
 						<div class="person--profile">
 							<div class="person--img">
-								<img src="assets/img/person1.jpg">
+								<img src="assets/img/avatar-bas.jpg">
 							</div>
 							<div class="person--name">
 								<span>Anouk van</span><br>
