--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 				<span class="navlink" data-link="#wat">Wat</span>
 			</li>
 			<li class="dropdown-menu--item">
-				<span class="navlink">Nieus</span>
+				<span class="navlink" data-link="#nieus">Nieus</span>
 			</li>
 			<li class="dropdown-menu--item">
 				<span class="navlink" data-link="#wie">WIE</span>
@@ -50,7 +50,7 @@
 
 		<div class="dropdown-menu--number">
 			Of bel ons gewoon effe:
-			<span>+31 (65) 589-62-07</span>
+			<span>0 (65) 589-62-07</span>
 		</div>
 	</section>
 
@@ -76,7 +76,7 @@
 				<span class="nav--link navlink" data-link="#wat">Wat</span>
 			</li>
 			<li class="nav--item">
-				<span class="nav--link navlink">Nieus</span>
+				<span class="nav--link navlink" data-link="#nieus">Nieus</span>
 			</li>
 			<li class="nav--item">
 				<span class="nav--link navlink" data-link="#wie">WIE</span>
@@ -104,6 +104,7 @@
 					<span class="popups--close close"></span>
 					<h3 class="popups--title">wat</h3>
 					<div class="popups--carousel-video">
+
 						<div class="popups--carousel--item">
 							<div class="popups--carousel-window">
 								<iframe src="https://player.vimeo.com/video/201275394" frameborder="0" allowfullscreen></iframe>
@@ -139,6 +140,46 @@
 									<span>2727246</span>
 									<span>22988</span>
 									<span>12277</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="popups--carousel--item">
+							<div class="popups--carousel-window">
+								<iframe src="https://www.youtube.com/embed/_AI8_1OP6GI" frameborder="0" allowfullscreen></iframe>
+							</div>
+
+							<div class="popups--info">
+								<h4>10 MENSEN MET SUPERKRACHTEN</h4>
+								<div class="popups--names">
+									<span>VIEWS</span>
+									<span>LIKES</span>
+									<span>ERACTIONS</span>
+								</div>
+								<div class="popups--numbers">
+									<span>2704000</span>
+									<span>44516</span>
+									<span>7520</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="popups--carousel--item">
+							<div class="popups--carousel-window">
+								<iframe src="https://www.youtube.com/embed/KoiAd0enrnU" frameborder="0" allowfullscreen></iframe>
+							</div>
+
+							<div class="popups--info">
+								<h4>10 MANIEREN OM UIT DE KLAS GESTUURD TE WORDEN</h4>
+								<div class="popups--names">
+									<span>VIEWS</span>
+									<span>LIKES</span>
+									<span>ERACTIONS</span>
+								</div>
+								<div class="popups--numbers">
+									<span>3801000</span>
+									<span>67431</span>
+									<span>8903</span>
 								</div>
 							</div>
 						</div>
@@ -227,28 +268,6 @@
 							<div class="person--position">Sales <br>Director</div>
 						</div>
 
-						<div class="person--profile">
-							<div class="person--img">
-								<img src="assets/img/avatar-bas.jpg">
-							</div>
-							<div class="person--name">
-								<span>Roy van</span><br>
-								<span>Rossum</span>
-							</div>
-							<div class="person--position">Account <br>Manager</div>
-						</div>
-
-						<div class="person--profile">
-							<div class="person--img">
-								<img src="assets/img/avatar-bas.jpg">
-							</div>
-							<div class="person--name">
-								<span>Anouk van</span><br>
-								<span>Schie</span>
-							</div>
-							<div class="person--position">Creative <br>Producer</div>
-						</div>
-
 					</div>
 					<div class="popups--carousel-person--dots"></div>
 
@@ -316,19 +335,16 @@
 
 			<section class="intro">
 				<h2 class="intro--title">
-					Wij zijn Online Cookie<br> Collective. Wij zijn<br> online en social. We<br> maken online content<br> omdat we dat leuk vinden.
+					Wij zijn Online <a href="" class="intro--link">Cookie</a><br> Collective. Wij zijn<br> online en social. We<br> maken online content<br> omdat we dat leuk vinden.
 				</h2>
 				<p class="intro--text">
-					En als je wilt maken we het ook leuk voor jou. Wij zijn namelijk de makers zelf.
-				</p>
-				<p class="intro--text">
-					En als je wilt maken we het ook leuk voor jou. Wij zijn namelijk de makers zelf. Geen reclamebureau, geen productiekantoor, geen media- en seeding partners. Alle tussen bedrijfjes zijn niet langer nodig, zonde van jouw geld en onze tijd. Kijk gerust even rond op onze website. En als je echt social wilt zijn, mail, app of roep ons dan even, dan komen we langs!
+					En als je wilt maken we het ook leuk voor jou. Wij zijn namelijk de makers zelf; YouTubers. Reclamebureau, productiehuis, media- en seedingpartner. Wij zijn het allemaal. Alle tussenbedrijfjes zijn niet langer nodig, zonde van jouw <a href="" class="intro--link">geld</a> en onze <a href="" class="intro--link">tijd</a>. Kijk gerust rond onze website. En als je echt social wilt zijn, mail, app of bel ons even en dan komen we bij je langs.
 				</p>
 				<p class="intro--text">
 					Wij zijn Online Cookie Collective.
 				</p>
 				<p class="intro--text">
-					Wij zijn Online en Social.
+					Wij zijn Online en <a href="" class="intro--link">social</a>.
 				</p>
 				<p class="intro--text">
 					En daar zijn we trots op.
@@ -340,13 +356,13 @@
 
 		<section class="info-random">
 			<div class="info-random--item">
-				Er zijn op dit moment <span>15 000 000</span> mensen social bezig in Nederland.
+				Er zijn op dit moment <a href="" class="info-random--link">15 000 000</a> mensen social bezig in Nederland.
 			</div>
 			<div class="info-random--item">
-				Another text <span>15 000</span> mensen social bezig<br> in Nederland.
+				Een Instagram account van een <a href="" class="info-random--link info-random--link-simple">kamerplant</a> met meer dan tienduizend volgers
 			</div>
 			<div class="info-random--item">
-				A new text <span> 1 000</span> mensen social bezig in Nederland.
+				Er zijn op dit moment <a href="" class="info-random--link">13 000</a> mensen social bezig in Nederland.
 			</div>
 		</section>
 
