--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="assets/css/styles.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/slick.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 </head>
 <body>
 
@@ -358,5 +359,7 @@
 	<script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="assets/js/slick.min.js"></script>
 	<script src="assets/js/index.js"></script>
+	<script type="text/javascript">
+	</script>
 </body>
 </html>
