--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
 				<span class="navlink" data-link="#wat">Wat</span>
 			</li>
 			<li class="dropdown-menu--item">
-				<span class="navlink" data-link="#nieus">Nieus</span>
+				<span class="navlink" data-link="#nieus">NIEUWS</span>
 			</li>
 			<li class="dropdown-menu--item">
 				<span class="navlink" data-link="#wie">WIE</span>
@@ -77,7 +77,7 @@
 				<span class="nav--link navlink" data-link="#wat">Wat</span>
 			</li>
 			<li class="nav--item">
-				<span class="nav--link navlink" data-link="#nieus">Nieus</span>
+				<span class="nav--link navlink" data-link="#nieus">NIEUWS</span>
 			</li>
 			<li class="nav--item">
 				<span class="nav--link navlink" data-link="#wie">WIE</span>
