--- a/html/index.html
+++ b/html/index.html
@@ -315,14 +315,14 @@
 						Allemaal hebben ze hun sporen verdient in de online wereld. En bij een interessante opdracht staan ze klaar om voor jou aan de slag te gaan.
 					</p>
 					<p class="popups--text">
-						Ken je <a href="" class="popups--link">Dylan Haegens</a>? Meer dan één miljoen abonnees op YouTube kennen hem heel goed. En wij ook. En daarnaast nog honderden anderen <a href="" class="popups--link">YouTube sterren</a>, <a href="" class="popups--link">Facebook grootheden</a>, <a href="" class="popups--link">Instagram helden</a>. Je noemt het en wij regelen het.
+						Ken je <a href="" class="popups--link">Dylan Haegens</a>? Meer dan één miljoen abonnees op YouTube kennen hem heel goed. En wij ook. En daarnaast nog honderden anderen <a href="" class="popups--link">YouTube sterren</a>, <a href="" class="popups--link">Facebook grootheden</a>, <a href="" class="popups--link">Instagram helden</a>. Je noemt het en wij <a href="" class="popups--link">regelen</a> het.
 					</p>
 				</div>
 				<div class="popups--item" id="productie">
 					<span class="popups--close close"></span>
 					<h3 class="popups--title">productie</h3>
 					<p class="popups--text">
-						Dat doen we gewoon zelf. Geen duur allesomvattend productiehuis.
+						Dat doen we gewoon <a href="" class="popups--link">zelf</a>. Geen duur allesomvattend productiehuis.
 					</p>
 					<p class="popups--text">
 						Wat niet wil zeggen dat we geen kwaliteit leveren. We doen ook<br> 
@@ -336,7 +336,7 @@
 
 			<section class="intro">
 				<h2 class="intro--title">
-					Wij zijn Online <a href="" class="intro--link">Cookie</a><br> Collective. Wij zijn<br> online en social. We<br> maken online content<br> omdat we dat leuk vinden.
+					Wij zijn Online <a href="" class="intro--link">Cookie</a><br> Collective. Wij zijn<br> online en social. We<br> maken online content<br> omdat we het leuk vinden.
 				</h2>
 				<p class="intro--text">
 					En als je wilt maken we het ook leuk voor jou. Wij zijn namelijk de makers zelf; YouTubers. Reclamebureau, productiehuis, media- en seedingpartner. Wij zijn het allemaal. Alle tussenbedrijfjes zijn niet langer nodig, zonde van jouw <a href="" class="intro--link">geld</a> en onze <a href="" class="intro--link">tijd</a>. Kijk gerust rond onze website. En als je echt social wilt zijn, mail, app of bel ons even en dan komen we bij je langs.
